aligned buttons, fixed edit task, fixed navbar

--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -5,8 +5,7 @@ html, body {
   margin:0;
   background-color: white;
   /*font-family: 'Sometype Mono', monospace;*/
-  font-family:'Open Sans', 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-
+  font-family: 'Segoe UI', 'Open Sans', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
 }
  
 .middleCtn{
@@ -14,7 +13,8 @@ html, body {
   width: 100%;
   top: 80px;
   bottom: 80px;
-  position: fixed;
+  position: absolute;
+  z-index: 1;
 }
 
 .pageCtn {
@@ -23,6 +23,7 @@ html, body {
   align-items: center;
   width: 88vw;
   position: relative;
+  overflow: auto;
 }
 
 a {
