--- a/react-app/src/styles/list.module.css
+++ b/react-app/src/styles/list.module.css
@@ -1,4 +1,4 @@
-.toDoList{
+.toDoList {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -10,7 +10,7 @@
     background-color:white;
     border: 1px solid black;
     border-radius: 20px;
-    position: absolute;
+    /*position: absolute;*/
     padding-bottom: 30px;
 }
 
@@ -23,50 +23,40 @@ ul {
     width: 80%;
 }
 
-.listItem{
+.listItem {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-items: center;
     flex-wrap: nowrap;
     font-size: 1rem;
 }
 
-.itemTask{
+.itemTask {
     text-align: left;
-    flex: 8;
     height: auto;
     width: 100%;
 }
 
-/*
-.btnTask{
-    width: 100px;
-    height: 35px;
-    border: none;
-    padding: 2%;
-    border-radius: 5px;
-    font-weight: bolder;
-    background-color: #7091F5;
-    color: #5f3d8f;
-}*/
-
-.btnTask  {
+.btnEdit {
     color: #5f3d8f;
     border: none;
     padding: 0;
-    margin-left: 0;
     background-color: transparent;
-    cursor:pointer;
+    cursor: pointer;
+    width: auto;
+    margin-left: auto;
+    margin-right: 30px;
 }
 
-
-.saveBtn {
-    border: none;
+.btnDelete  {
     color: #5f3d8f;
+    border: none;
+    padding: 0;
     background-color: transparent;
-    cursor:pointer;  
-
+    cursor: pointer;
+    width: auto;
+    margin-left: 0;
 }
 
 .btnBack  {
@@ -76,25 +66,11 @@ ul {
     margin-left: 0;
     background-color: transparent;
     margin-top: 20px;
-     
 }
 
 span {
     font-weight: bold;
 }
-/*
-.btnBack{
-    width: 100px;
-    height: 35px;
-    margin-top: 20px;
-    border: none;
-    padding: 2%;
-    border-radius: 5px;
-    font-weight: bolder;
-    background-color: #7091F5;
-    color: #5f3d8f;
-}*/
-
 
 form {
     display: flex;
@@ -107,15 +83,15 @@ form {
 }
 
 label {
-    display:flex;
-    align-items:center;
-    justify-content:center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     flex: 8;
 }
 
 input {
     padding: 10px;
-    width: 70%;
+    width: 80%;
     border: 1px solid #ccc;
     border-radius: 5px;
     box-sizing: border-box;
@@ -128,34 +104,36 @@ input {
     color: #5f3d8f;
     border: none;
     padding: 0;
-    margin: 0;
     background-color: transparent;
-    margin-left:auto;
-    cursor:pointer;  
+    margin-left: auto;
+    cursor: pointer;  
 }
 
+.editLabel {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    width: 100%;
+    margin-left: -10px;
+}
 
 .editInput {
+    flex-grow: 0.6;
     padding: 10px;
-    width: 80%;
+    width: auto;
     border: 1px solid #ccc;
     border-radius: 5px;
     box-sizing: border-box;
     font-family: 'Open Sans', 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 1rem;
-   
 }
 
-
-/*
-.btnAddTask {
-    width: 100px;
-    height: 35px;
+.saveBtn {
     border: none;
-    padding: 2%;
-    border-radius: 5px;
-    font-weight: bolder;
-    background-color: #7091F5;
     color: #5f3d8f;
-    margin-left: auto;
-}*/
+    background-color: transparent;
+    cursor: pointer; 
+    width: auto;
+    margin-left: 0;
+    padding-right: 0;
+}
